# OpenXML-Office

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Directory.Build.props  Doxyfile.conf  LICENCE.md  LICENSE  License  OpenXMLOffice.sln  README.md  build.sh
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: coverage.yml  document-publish.yml  nuget-publish-alpha.yml  nuget-publish-stable.yml  nuget-publish.yml  pr-validation-main.yml  pre-release.yml  release.yml
Document/: Document.csproj  Word.cs
Document/Internal/: Document.cs  (+1 more)
Excel/: Excel.csproj  ShareString.cs  SpreadSheet.cs  Spreadsheet.cs  SpreadsheetCore.cs  Styles.cs  Worksheet.cs
Global/: Class1.cs  Constants.cs  Global.csproj  GlobalConstants.cs
Presentation/: CommonSlideData.cs  Global.cs  PowerPoint.cs  Presentation.cs  Presentation.csproj  PresentationConstants.cs  PresentationCore.cs  Slide.cs  SlideLayout.cs  SlideMaster.cs  Theme.cs
Spreadsheet/: Spreadsheet.csproj
Tests/: CommonMethods.cs  Document.cs  Excel.cs  Presentation.cs  Spreadsheet.cs  Tests.csproj
V1/: README (1).md  README.md  SUMMARY.md  getting-started.md
V2/: README.md  SUMMARY.md  getting-started.md  license.md  privacy-policy.md
openxml-cs/: Directory.Build.props  openXML-Office.sln
openxml-java/: pom.xml
openxml-rs/: Cargo.toml
openxmloffice-core/efi/: Cargo.toml
openxmloffice-cs/: Directory.Build.props  openXML-Office.sln
openxmloffice-rs/: Cargo.toml
openxmloffice-rs-api/: Cargo.toml
(+310 files in other folders)
